on mobile, fix username on comment section

--- a/client/src/components/css/OneArticle.css
+++ b/client/src/components/css/OneArticle.css
@@ -477,6 +477,18 @@ ul footer {
   z-index: 1;
 }
 
+@media screen and (max-width: 420px) {
+  .media-heading {
+    top: 0;
+    left: 40%;
+    text-transform: capitalize;
+  }
+
+  .svg-inline--fa {
+    margin-left: 2em;
+  }
+}
+
 @media screen and (min-width: 300px) and (max-width: 550px) {
 
   .jumbotron {
