--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -169,7 +169,7 @@ li {
 
     .nav .user {
         position: relative;
-        left: -28%;
+        left: -18%;
         font-size: 14px;
         top: -8px;
     }
